--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Category</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
     <div>
@@ -21,7 +21,7 @@
                         <th scope="row">[[${category.id}]]</th>
                         <td>[[${category.name}]]</td>
                         <td>
-                            <button onclick="editCategory(${category.id}, ${category.name})">Edit</button>
+                            <button th:onclick="javascript:editCategory([[${category.id}]], [[${category.name}]])">Edit</button>
                             <a class="h4" th:href="@{'/category/delete/' + ${category.id}}">Delete</a>
                         </td>
                     </tr>
@@ -32,7 +32,7 @@
         </div>
         <div>
             <form th:action="@{/category/save}" method="post" th:object="${category}">
-                <input type="hidden" th:field="*{id}">
+                <input type="text" th:field="*{id}">
                 <div class="form-group">
                     <label>Name</label>
                     <input type="text" class="form-control" th:field="*{name}" placeholder="Enter Name" required minlength="5" maxlength="50">
@@ -45,10 +45,25 @@
 </body>
 <script>
     function editCategory(id, name) {
-        console.log(id);
+            alert(name)
         document.getElementById('id').value = id;
         document.getElementById('name').value = name;
     }
+    function makeid() {
+        var text = "SP";
+        var str = document.getElementById("id");
+        var possible = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";
+        for (var i = 0; i < 10; i++) {
+            text += possible.charAt(Math.floor(Math.random() * possible.length));
+        }
+
+        if (str.value == "") {
+            alert(text)
+            str.value = text
+            console.log("str" + str)
+        }
+    }
+    window.addEventListener("load", makeid())
 </script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
