--- a/src/main/resources/templates/admin/category.html
+++ b/src/main/resources/templates/admin/category.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <title>Category</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://example.com/fontawesome/v5.15.4/js/all.js" data-search-pseudo-elements ></script>
 </head>
 <body>
+    <header th:insert="admin/header.html"> </header>
     <div>
+        <div th:if="${message}" class="alert alert-success text-center">
+            [[${message}]]
+        </div>
+        <div th:if="${errorMessage}" class="alert alert-danger text-center">
+            [[${errorMessage}]]
+        </div>
         <div>
             <table class="table table-striped">
                 <thead>
@@ -21,8 +29,8 @@
                         <th scope="row">[[${category.id}]]</th>
                         <td>[[${category.name}]]</td>
                         <td>
-                            <button th:onclick="javascript:editCategory([[${category.id}]], [[${category.name}]])">Edit</button>
-                            <a class="h4" th:href="@{'/category/delete/' + ${category.id}}">Delete</a>
+                            <button class="btn btn-warning" th:onclick="javascript:editCategory([[${category.id}]], [[${category.name}]])">Edit</button>
+                            <a class="btn btn-danger" th:href="@{'/admin/category/delete/' + ${category.id}}">Delete</a>
                         </td>
                     </tr>
                 </th:block>
@@ -31,40 +39,42 @@
             </table>
         </div>
         <div>
-            <form th:action="@{/category/save}" method="post" th:object="${category}">
-                <input type="text" th:field="*{id}">
+            <form th:action="@{/admin/category/save}" method="post" th:object="${category}">
+                <input type="hidden" th:field="*{id}">
                 <div class="form-group">
-                    <label>Name</label>
-                    <input type="text" class="form-control" th:field="*{name}" placeholder="Enter Name" required minlength="5" maxlength="50">
+                    <label>Name</label> <span class="ml-3" onclick="reload()"><i class="fas fa-sync-alt"></i></span>
+                    <input type="text" class="form-control col-3" th:field="*{name}" placeholder="Enter Name" required minlength="5" maxlength="50">
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-
+                <button type="submit" class="btn btn-primary mb-2">SAVE</button>
             </form>
         </div>
     </div>
+    <footer th:insert="admin/footer.html"> </footer>
 </body>
 <script>
+    function reload() {
+        document.getElementById("id").value = "";
+        document.getElementById('name').value = "";
+        makeId();
+    }
+</script>
+<script>
     function editCategory(id, name) {
-            alert(name)
         document.getElementById('id').value = id;
         document.getElementById('name').value = name;
     }
-    function makeid() {
+    function makeId() {
         var text = "SP";
         var str = document.getElementById("id");
         var possible = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";
         for (var i = 0; i < 10; i++) {
             text += possible.charAt(Math.floor(Math.random() * possible.length));
         }
-
-        if (str.value == "") {
-            alert(text)
-            str.value = text
-            console.log("str" + str)
-        }
+        str.value = text
     }
-    window.addEventListener("load", makeid())
+    window.addEventListener("load", reload())
 </script>
+
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
