--- a/src/main/resources/templates/admin/product.html
+++ b/src/main/resources/templates/admin/product.html
@@ -6,12 +6,16 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-    <div class="mt-4">
+    <header th:insert="admin/header.html"> </header>
+    <div>
         <div>
-            <a class="h2" th:href="@{/product/new}">Add new Product</a>
+            <a class="btn btn-secondary m-4" th:href="@{/admin/product/new}">Add new Product</a>
         </div>
         <div th:if="${message}" class="alert alert-success text-center">
             [[${message}]]
+        </div>
+        <div th:if="${errorMessage}" class="alert alert-danger text-center">
+            [[${errorMessage}]]
         </div>
         <div>
             <table class="table">
@@ -21,6 +25,7 @@
                     <th scope="col">Name</th>
                     <th scope="col">Price</th>
                     <th scope="col">Category</th>
+                    <th scope="col">Quantity</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -30,9 +35,10 @@
                         <td>[[${product.name}]]</td>
                         <td>[[${product.price}]]</td>
                         <td>[[${product.category.name}]]</td>
+                        <td>[[${product.quantity}]]</td>
                         <td>
-                            <a class="h4 mr-3" th:href="@{'/product/edit/' + ${product.id}}">Edit</a>
-                            <a class="h4" th:href="@{'/product/delete/' + ${product.id}}">Delete</a>
+                            <a class="btn btn-warning" th:href="@{'/admin/product/edit/' + ${product.id}}">Edit</a>
+                            <a class="btn btn-danger" th:href="@{'/admin/product/delete/' + ${product.id}}">Delete</a>
                         </td>
                     </tr>
                 </th:block>
@@ -40,6 +46,7 @@
             </table>
         </div>
     </div>
+    <footer th:insert="admin/footer.html"> </footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
