--- a/src/main/resources/templates/admin/product_form.html
+++ b/src/main/resources/templates/admin/product_form.html
@@ -6,16 +6,17 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-    <div>
-        [[${pageTitle}]]
+    <header th:insert="admin/header.html"> </header>
+    <div class="mt-3">
+        <h2 class="text-center">[[${pageTitle}]]</h2>
     </div>
-    <div>
-        <form th:action="@{/product/save}" method="post" th:object="${product}">
+    <div class="m-3">
+        <form th:action="@{/admin/product/save}" method="post" th:object="${product}">
             <div class="input-group p-0 mb-2">
                 <div class="input-group-prepend">
                     <span class="input-group-text">ID</span>
                 </div>
-                <input type="text" class="form-control" id="id" th:field="*{id}">
+                <input type="text" class="form-control" id="id" th:field="*{id}" disabled>
             </div>
             <div class="form-group">
                 <label>Danh mục: </label>
@@ -28,32 +29,33 @@
             </div>
             <div class="form-group">
                 <label>Tên sản phẩm: </label>
-                <input type="text" class="form-control" maxlength="30" value="" th:field="*{name}">
+                <input type="text" class="form-control" maxlength="30" value="" th:field="*{name}" required>
             </div>
             <div class="d-flex">
                 <div class="form-group">
                     <label>Giá: </label>
-                    <input type="number" class="form-control input-price" min="0" value="" th:field="*{price}" required>
+                    <input type="number" class="form-control input-price" min="1" value="" th:field="*{price}" required>
                 </div>
                 <div class="form-group ml-1">
                     <label>Số lượng: </label>
-                    <input type="number" class="form-control" min="0" value="" th:field="*{quantity}" required>
+                    <input type="number" class="form-control" min="1" value="" th:field="*{quantity}" required>
                 </div>
             </div>
             <div class="">
                 <label>URL: </label>
                 <input type="text" class="form-control" th:field="*{url}" required>
             </div>
-            <div>
-                <input type="submit" class="btn btn-success btn-fill" value="CREATE">
+            <div class="m-3">
+                <input type="submit" class="btn btn-success btn-fill" value="SAVE">
                 <button type="button" class="btn btn-secondary" onclick="cancelForm()">Cancel</button>
             </div>
         </form>
     </div>
+    <footer th:insert="admin/footer.html"> </footer>
 </body>
 <script type="text/javascript">
     function cancelForm() {
-        window.location = "[[@{/product}]]"
+        window.location = "[[@{/admin/product}]]"
     }
 </script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
